--- a/cordova-app/platforms/android/app/build.gradle
+++ b/cordova-app/platforms/android/app/build.gradle
@@ -26,10 +26,11 @@ buildscript {
             url "https://maven.google.com"
         }
         jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
     }
 }
 
@@ -166,6 +167,8 @@ android {
     defaultConfig {
         versionCode cdvVersionCode ?: new BigInteger("" + privateHelpers.extractIntFromManifest("versionCode"))
         applicationId privateHelpers.extractStringFromManifest("package")
+        minSdkVersion 19
+        targetSdkVersion 27
 
         if (cdvMinSdkVersion != null) {
             minSdkVersion cdvMinSdkVersion
