--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,8 @@
     "@babel/plugin-proposal-class-properties"
   ],
   "presets": [
-    "@babel/preset-env"
+    [
+      "@babel/preset-env", { "debug": true }
+    ]
   ]
 }
